@@ -18,7 +18,7 @@
 
   <groupId>org.talend.sdk.component</groupId>
   <artifactId>component-runtime</artifactId>
-  <version>1.38.0-SNAPSHOT</version>
+  <version>1.39.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Component Runtime</name>
@@ -169,7 +169,7 @@
     <johnzon.version>1.2.10</johnzon.version>
     <meecrowave.version>1.2.12</meecrowave.version>
     <owb.version>2.0.23</owb.version>
-    <tomcat.version>9.0.50</tomcat.version>
+    <tomcat.version>9.0.54</tomcat.version>
     <cxf.version>3.4.4</cxf.version>
     <log4j2.version>2.14.1</log4j2.version>
     <logback.version>1.2.5</logback.version>
@@ -188,8 +188,8 @@
     <commons-cli.version>1.4</commons-cli.version>
     <commons-text.version>1.8</commons-text.version>
     <geronimo-jaxrs.version>1.1</geronimo-jaxrs.version>
-    <asciidoctorj.version>2.4.1</asciidoctorj.version>
-    <asciidoctorj-pdf.version>1.5.3</asciidoctorj-pdf.version>
+    <asciidoctorj.version>2.4.3</asciidoctorj.version>
+    <asciidoctorj-pdf.version>1.5.4</asciidoctorj-pdf.version>
     <microprofile-config-api.version>1.3</microprofile-config-api.version>
     <microprofile-openapi-api.version>1.1.1</microprofile-openapi-api.version>
     <microprofile-opentracing.version>1.2.1</microprofile-opentracing.version>
@@ -200,31 +200,31 @@
     <geronimo-metrics.version>1.0.3</geronimo-metrics.version>
     <geronimo-opentracing.version>1.0.2</geronimo-opentracing.version>
     <geronimo-config.version>1.2.2</geronimo-config.version>
-    <junit5.version>5.8.0-M1</junit5.version>
+    <junit5.version>5.8.1</junit5.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jackson.version>2.12.1</jackson.version>
     <jackson-databind.version>${jackson.version}</jackson-databind.version>
     <avro-jackson.version>1.9.13</avro-jackson.version>
     <avro.version>1.8.2</avro.version>
-    <jsoup.version>1.14.2</jsoup.version>
+    <jsoup.version>1.14.3</jsoup.version>
 
     <talend-icon.version>3.8.0</talend-icon.version> <!-- deprecated after -->
     <talend-ui.version>5.23.0</talend-ui.version>
 
     <!-- for the starter -->
-    <gradle.version>6.0-rc-1</gradle.version>
     <mvn.version>3.8.1</mvn.version>
     <maven-shared-utils.version>3.3.4</maven-shared-utils.version>
 
-    <beam.version>2.32.0</beam.version>
+    <beam.version>2.33.0</beam.version>
     <!-- should follow beam-sdk-java-core version -->
     <joda.time.version>2.10.10</joda.time.version>
 
-    <spark.version>3.0.1</spark.version>
+    <spark.version>3.2.0</spark.version>
     <spark-scala.version>2.12</spark-scala.version>
 
+    <gradle.version>6.9.1</gradle.version>
     <groovy.version>3.0.9</groovy.version>
-    <gmavenplus.version>1.12.1</gmavenplus.version>
+    <gmavenplus.version>1.13.0</gmavenplus.version>
     <dependency-plugin.version>3.1.1</dependency-plugin.version>
     <assembly-plugin.version>3.1.1</assembly-plugin.version>
     <javadoc-plugin.version>3.2.0</javadoc-plugin.version>
@@ -239,7 +239,7 @@
     <jgit.version>5.10.0.202012080955-r</jgit.version>
     <clirr-plugin.version>2.8</clirr-plugin.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <jacoco.version>0.8.5</jacoco.version>
+    <jacoco.version>0.8.7</jacoco.version>
     <gpg-plugin.version>1.6</gpg-plugin.version>
     <spotless.version>1.23.0</spotless.version>
     <jib.version>1.4.0</jib.version>
@@ -247,16 +247,19 @@
     <bouncycastle.version>1.68</bouncycastle.version>
     <commons-io.version>2.8.0</commons-io.version>
 
-    <jruby.version>9.2.13.0</jruby.version>
+    <jruby.version>9.2.19.0</jruby.version>
     <node.version>v12.13.0</node.version>
     <npm.version>6.12.0</npm.version>
     <frontend.version>1.8.0</frontend.version>
 
     <!-- misc dependencies -->
+    <maven-bundle-plugin.version>4.2.1</maven-bundle-plugin.version>
+    <bndlib.version>5.1.0</bndlib.version>
     <jcommander.version>1.78</jcommander.version>
     <!-- for manual testing only, not required -->
     <talend.component.server.component.coordinates.samples>org.talend.components:servicenow:0.0.1-SNAPSHOT</talend.component.server.component.coordinates.samples>
-    <java11.jaxb.version>2.3.0</java11.jaxb.version>
+    <jaxb.version>2.3.1</jaxb.version>
+    <java11.jaxb.version>2.3.5</java11.jaxb.version>
     <!-- minimal code coverage ratio -->
     <coverage.min>0.75</coverage.min>
     <coverage.fail>false</coverage.fail>
@@ -746,6 +749,11 @@
         <artifactId>jcommander</artifactId>
         <version>${jcommander.version}</version>
       </dependency>
+      <dependency>
+        <groupId>biz.aQute.bnd</groupId>
+        <artifactId>biz.aQute.bndlib</artifactId>
+        <version>${bndlib.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
@@ -822,12 +830,12 @@
             <dependency>
               <groupId>javax.xml.bind</groupId>
               <artifactId>jaxb-api</artifactId>
-              <version>${java11.jaxb.version}</version>
+              <version>${jaxb.version}</version>
             </dependency>
             <dependency>
               <groupId>com.sun.xml.bind</groupId>
               <artifactId>jaxb-impl</artifactId>
-              <version>${java11.jaxb.version}</version>
+              <version>${jaxb.version}</version>
               <exclusions>
                 <exclusion>
                   <groupId>javax.xml.bind</groupId>
@@ -1060,7 +1068,6 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin><!--  mvn ossindex:audit -->
         <groupId>org.sonatype.ossindex.maven</groupId>
         <artifactId>ossindex-maven-plugin</artifactId>
@@ -1234,7 +1241,7 @@
           </systemPropertyVariables>
           <!-- <forkCount>1</forkCount> --> <!-- never use 0, it affects too much test behavior to be accurate -->
           <trimStackTrace>false</trimStackTrace>
-          <argLine>${argLine}</argLine>
+          <argLine>${argLine} ${extraJvmFlags}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -1244,13 +1251,20 @@
         <configuration>
           <forkCount>1</forkCount>
           <trimStackTrace>false</trimStackTrace>
-          <argLine>${argLine}</argLine>
+          <argLine>${argLine} ${extraJvmFlags}</argLine>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>4.2.0</version>
+        <version>${maven-bundle-plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>biz.aQute.bndlib</artifactId>
+            <version>${bndlib.version}</version>
+          </dependency>
+        </dependencies>
         <extensions>true</extensions>
       </plugin>
       <plugin>
@@ -1563,12 +1577,6 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
             <version>${gpg-plugin.version}</version>
-            <configuration>
-<!--              <gpgArguments>-->
-<!--                <arg>&#45;&#45;pinentry-mode</arg>-->
-<!--                <arg>loopback</arg>-->
-<!--              </gpgArguments>-->
-            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -1645,6 +1653,30 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <extraJvmFlags>
+          --add-modules=ALL-SYSTEM
+          --add-opens java.base/java.io=ALL-UNNAMED
+          --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.net=ALL-UNNAMED
+          --add-opens java.base/java.nio=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+          --add-opens java.base/sun.security.action=ALL-UNNAMED
+          --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+        </extraJvmFlags>
+      </properties>
     </profile>
   </profiles>
 </project>
